--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Galaxy Guard</string>
     <string name="title_activity_maps">Map</string>
+    <string name="map_key" translatable="false">AIzaSyCjwiSDWZF23Yho_4ViAaPvDGVcqYLEiR8</string>
 </resources>
